Update and rename style.css to html.css

--- a/html.css
+++ b/html.css
@@ -12,7 +12,7 @@
 <body> <h1>  <p align=left> Cachorros vacinados 
  
 <body>
- <img src="images/cachorros.jpg">
+ <img src="images/cachorross.jpeg">
 body {
     margin: 0;
 }
